@@ -293,11 +293,14 @@ activate_socket(#state{socket = Socket,
 
 process_data(Data,
 	     #state{xml_stream_state = XMLStreamState,
-		    shaper_state = ShaperState} = State) ->
+		    shaper_state = ShaperState,
+		    c2s_pid = C2SPid} = State) ->
     ?DEBUG("Received XML on stream = ~p", [binary_to_list(Data)]),
     XMLStreamState1 = xml_stream:parse(XMLStreamState, Data),
     {NewShaperState, Pause} = shaper:update(ShaperState, size(Data)),
     if
+	C2SPid == undefined ->
+	    ok;
 	Pause > 0 ->
 	    erlang:start_timer(Pause, self(), activate);
 	true ->
